@@ -3,10 +3,8 @@ package ai.timefold.solver.core.impl.heuristic.selector.move.generic.list;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import ai.timefold.solver.core.config.heuristic.selector.common.SelectionCacheType;
 import ai.timefold.solver.core.config.heuristic.selector.common.SelectionOrder;
@@ -17,15 +15,11 @@ import ai.timefold.solver.core.config.heuristic.selector.move.MoveSelectorConfig
 import ai.timefold.solver.core.config.heuristic.selector.move.generic.list.SubListChangeMoveSelectorConfig;
 import ai.timefold.solver.core.config.heuristic.selector.value.ValueSelectorConfig;
 import ai.timefold.solver.core.impl.domain.entity.descriptor.EntityDescriptor;
-import ai.timefold.solver.core.impl.domain.variable.descriptor.GenuineVariableDescriptor;
 import ai.timefold.solver.core.impl.domain.variable.descriptor.ListVariableDescriptor;
 import ai.timefold.solver.core.impl.domain.variable.descriptor.VariableDescriptor;
 import ai.timefold.solver.core.impl.heuristic.HeuristicConfigPolicy;
-import ai.timefold.solver.core.impl.heuristic.selector.entity.EntitySelector;
 import ai.timefold.solver.core.impl.heuristic.selector.entity.EntitySelectorFactory;
-import ai.timefold.solver.core.impl.heuristic.selector.list.DestinationSelector;
 import ai.timefold.solver.core.impl.heuristic.selector.list.DestinationSelectorFactory;
-import ai.timefold.solver.core.impl.heuristic.selector.list.SubListSelector;
 import ai.timefold.solver.core.impl.heuristic.selector.list.SubListSelectorFactory;
 import ai.timefold.solver.core.impl.heuristic.selector.move.AbstractMoveSelectorFactory;
 import ai.timefold.solver.core.impl.heuristic.selector.move.MoveSelector;
@@ -41,39 +35,35 @@ public class SubListChangeMoveSelectorFactory<Solution_>
     @Override
     protected MoveSelector<Solution_> buildBaseMoveSelector(HeuristicConfigPolicy<Solution_> configPolicy,
             SelectionCacheType minimumCacheType, boolean randomSelection) {
-        checkUnfolded("subListSelectorConfig", config.getSubListSelectorConfig());
-        checkUnfolded("destinationSelectorConfig", config.getDestinationSelectorConfig());
+        var subListSelectorConfig = checkUnfolded("subListSelectorConfig", config.getSubListSelectorConfig());
+        var destinationSelectorConfig = checkUnfolded("destinationSelectorConfig", config.getDestinationSelectorConfig());
         if (!randomSelection) {
-            throw new IllegalArgumentException("The subListChangeMoveSelector (" + config
-                    + ") only supports random selection order.");
+            throw new IllegalArgumentException("The subListChangeMoveSelector (%s) only supports random selection order."
+                    .formatted(config));
         }
-
-        SelectionOrder selectionOrder = SelectionOrder.fromRandomSelectionBoolean(randomSelection);
-
-        EntitySelector<Solution_> entitySelector = EntitySelectorFactory
-                .<Solution_> create(config.getDestinationSelectorConfig().getEntitySelectorConfig())
+        var selectionOrder = SelectionOrder.fromRandomSelectionBoolean(randomSelection);
+        var entitySelector = EntitySelectorFactory
+                .<Solution_> create(destinationSelectorConfig.getEntitySelectorConfig())
                 .buildEntitySelector(configPolicy, minimumCacheType, selectionOrder);
-
-        SubListSelector<Solution_> subListSelector = SubListSelectorFactory
-                .<Solution_> create(config.getSubListSelectorConfig())
+        var subListSelector = SubListSelectorFactory
+                .<Solution_> create(subListSelectorConfig)
                 .buildSubListSelector(configPolicy, entitySelector, minimumCacheType, selectionOrder);
-
-        DestinationSelector<Solution_> destinationSelector = DestinationSelectorFactory
-                .<Solution_> create(config.getDestinationSelectorConfig())
+        var destinationSelector = DestinationSelectorFactory
+                .<Solution_> create(destinationSelectorConfig)
                 .buildDestinationSelector(configPolicy, minimumCacheType, randomSelection);
-
-        boolean selectReversingMoveToo = Objects.requireNonNullElse(config.getSelectReversingMoveToo(), true);
-
+        var selectReversingMoveToo = Objects.requireNonNullElse(config.getSelectReversingMoveToo(), true);
         return new RandomSubListChangeMoveSelector<>(subListSelector, destinationSelector, selectReversingMoveToo);
     }
 
     @Override
     protected MoveSelectorConfig<?> buildUnfoldedMoveSelectorConfig(HeuristicConfigPolicy<Solution_> configPolicy) {
+        var destinationSelectorConfig = config.getDestinationSelectorConfig();
+        var destinationEntitySelectorConfig = destinationSelectorConfig == null ? null
+                : destinationSelectorConfig.getEntitySelectorConfig();
         Collection<EntityDescriptor<Solution_>> entityDescriptors;
-        EntityDescriptor<Solution_> onlyEntityDescriptor = config.getDestinationSelectorConfig() == null ? null
-                : config.getDestinationSelectorConfig().getEntitySelectorConfig() == null ? null
-                        : EntitySelectorFactory
-                                .<Solution_> create(config.getDestinationSelectorConfig().getEntitySelectorConfig())
+        var onlyEntityDescriptor = destinationSelectorConfig == null ? null
+                : destinationEntitySelectorConfig == null ? null
+                        : EntitySelectorFactory.<Solution_> create(destinationEntitySelectorConfig)
                                 .extractEntityDescriptor(configPolicy);
         if (onlyEntityDescriptor != null) {
             entityDescriptors = Collections.singletonList(onlyEntityDescriptor);
@@ -81,42 +71,44 @@ public class SubListChangeMoveSelectorFactory<Solution_>
             entityDescriptors = configPolicy.getSolutionDescriptor().getGenuineEntityDescriptors();
         }
         if (entityDescriptors.size() > 1) {
-            throw new IllegalArgumentException("The subListChangeMoveSelector (" + config
-                    + ") cannot unfold when there are multiple entities (" + entityDescriptors + ")."
-                    + " Please use one subListChangeMoveSelector per each planning list variable.");
+            throw new IllegalArgumentException("""
+                    The subListChangeMoveSelector (%s) cannot unfold when there are multiple entities (%s).
+                    Please use one subListChangeMoveSelector per each planning list variable."""
+                    .formatted(config, entityDescriptors));
         }
-        EntityDescriptor<Solution_> entityDescriptor = entityDescriptors.iterator().next();
+        var entityDescriptor = entityDescriptors.iterator().next();
 
-        List<ListVariableDescriptor<Solution_>> variableDescriptorList = new ArrayList<>();
-        GenuineVariableDescriptor<Solution_> onlySubListVariableDescriptor =
-                config.getSubListSelectorConfig() == null ? null
-                        : config.getSubListSelectorConfig().getValueSelectorConfig() == null ? null
-                                : ValueSelectorFactory
-                                        .<Solution_> create(config.getSubListSelectorConfig().getValueSelectorConfig())
+        var subListSelectorConfig = config.getSubListSelectorConfig();
+        var subListValueSelectorConfig = subListSelectorConfig == null ? null
+                : subListSelectorConfig.getValueSelectorConfig();
+        var variableDescriptorList = new ArrayList<ListVariableDescriptor<Solution_>>();
+        var onlySubListVariableDescriptor =
+                subListSelectorConfig == null ? null
+                        : subListValueSelectorConfig == null ? null
+                                : ValueSelectorFactory.<Solution_> create(subListValueSelectorConfig)
                                         .extractVariableDescriptor(configPolicy, entityDescriptor);
-        GenuineVariableDescriptor<Solution_> onlyDestinationVariableDescriptor =
-                config.getDestinationSelectorConfig() == null ? null
-                        : config.getDestinationSelectorConfig().getValueSelectorConfig() == null ? null
-                                : ValueSelectorFactory
-                                        .<Solution_> create(config.getDestinationSelectorConfig().getValueSelectorConfig())
+        var destinationValueSelectorConfig = destinationSelectorConfig == null ? null
+                : destinationSelectorConfig.getValueSelectorConfig();
+        var onlyDestinationVariableDescriptor =
+                destinationSelectorConfig == null ? null
+                        : destinationValueSelectorConfig == null ? null
+                                : ValueSelectorFactory.<Solution_> create(destinationValueSelectorConfig)
                                         .extractVariableDescriptor(configPolicy, entityDescriptor);
         if (onlySubListVariableDescriptor != null && onlyDestinationVariableDescriptor != null) {
             if (!onlySubListVariableDescriptor.isListVariable()) {
-                throw new IllegalArgumentException("The subListChangeMoveSelector (" + config
-                        + ") is configured to use a planning variable (" + onlySubListVariableDescriptor
-                        + "), which is not a planning list variable.");
+                throw new IllegalArgumentException(
+                        "The subListChangeMoveSelector (%s) is configured to use a planning variable (%s), which is not a planning list variable."
+                                .formatted(config, onlySubListVariableDescriptor));
             }
             if (!onlyDestinationVariableDescriptor.isListVariable()) {
-                throw new IllegalArgumentException("The subListChangeMoveSelector (" + config
-                        + ") is configured to use a planning variable (" + onlyDestinationVariableDescriptor
-                        + "), which is not a planning list variable.");
+                throw new IllegalArgumentException(
+                        "The subListChangeMoveSelector (%s) is configured to use a planning variable (%s), which is not a planning list variable."
+                                .formatted(config, onlyDestinationVariableDescriptor));
             }
             if (onlySubListVariableDescriptor != onlyDestinationVariableDescriptor) {
-                throw new IllegalArgumentException("The subListSelector's valueSelector ("
-                        + config.getSubListSelectorConfig().getValueSelectorConfig()
-                        + ") and destinationSelector's valueSelector ("
-                        + config.getDestinationSelectorConfig().getValueSelectorConfig()
-                        + ") must be configured for the same planning variable.");
+                throw new IllegalArgumentException(
+                        "The subListSelector's valueSelector (%s) and destinationSelector's valueSelector (%s) must be configured for the same planning variable."
+                                .formatted(subListValueSelectorConfig, destinationEntitySelectorConfig));
             }
             if (onlyEntityDescriptor != null) {
                 // No need for unfolding or deducing
@@ -128,21 +120,23 @@ public class SubListChangeMoveSelectorFactory<Solution_>
                     entityDescriptor.getGenuineVariableDescriptorList().stream()
                             .filter(VariableDescriptor::isListVariable)
                             .map(variableDescriptor -> ((ListVariableDescriptor<Solution_>) variableDescriptor))
-                            .collect(Collectors.toList()));
+                            .toList());
         }
         if (variableDescriptorList.isEmpty()) {
-            throw new IllegalArgumentException("The subListChangeMoveSelector (" + config
-                    + ") cannot unfold because there are no planning list variables.");
+            throw new IllegalArgumentException(
+                    "The subListChangeMoveSelector (%s) cannot unfold because there are no planning list variables."
+                            .formatted(config));
         }
         if (variableDescriptorList.size() > 1) {
-            throw new IllegalArgumentException("The subListChangeMoveSelector (" + config
-                    + ") cannot unfold because there are multiple planning list variables.");
+            throw new IllegalArgumentException(
+                    "The subListChangeMoveSelector (%s) cannot unfold because there are multiple planning list variables."
+                            .formatted(config));
         }
         return buildChildMoveSelectorConfig(variableDescriptorList.get(0));
     }
 
     private SubListChangeMoveSelectorConfig buildChildMoveSelectorConfig(ListVariableDescriptor<?> variableDescriptor) {
-        SubListChangeMoveSelectorConfig subListChangeMoveSelectorConfig = config.copyConfig()
+        var subListChangeMoveSelectorConfig = config.copyConfig()
                 .withSubListSelectorConfig(new SubListSelectorConfig(config.getSubListSelectorConfig())
                         .withValueSelectorConfig(Optional.ofNullable(config.getSubListSelectorConfig())
                                 .map(SubListSelectorConfig::getValueSelectorConfig)
@@ -164,7 +158,7 @@ public class SubListChangeMoveSelectorFactory<Solution_>
                                         // override variable name (destination value selector is never replaying)
                                         .withVariableName(variableDescriptor.getVariableName())));
 
-        SubListSelectorConfig subListSelectorConfig = subListChangeMoveSelectorConfig.getSubListSelectorConfig();
+        var subListSelectorConfig = Objects.requireNonNull(subListChangeMoveSelectorConfig.getSubListSelectorConfig());
         SubListConfigUtil.transferDeprecatedMinimumSubListSize(
                 subListChangeMoveSelectorConfig,
                 SubListChangeMoveSelectorConfig::getMinimumSubListSize,
@@ -175,11 +169,10 @@ public class SubListChangeMoveSelectorFactory<Solution_>
                 SubListChangeMoveSelectorConfig::getMaximumSubListSize,
                 "subListSelector",
                 subListSelectorConfig);
-
         if (subListSelectorConfig.getMimicSelectorRef() == null) {
-            subListSelectorConfig.getValueSelectorConfig().setVariableName(variableDescriptor.getVariableName());
+            Objects.requireNonNull(subListSelectorConfig.getValueSelectorConfig())
+                    .setVariableName(variableDescriptor.getVariableName());
         }
-
         return subListChangeMoveSelectorConfig;
     }
 }
